crates/parser/src/tests/snapshots/parser__tests__event__process_forward_parent_chain.snap
---
source: crates/parser/src/tests/event.rs
description: forward parent chain
expression: output.steps()
---
[
    Enter(CallExpr),
    Enter(FieldExpr),
    Enter(PathExpr),
    Ident(1),
    Exit,
    Dot(1),
    Ident(1),
    Exit,
    OpenParen(1),
    CloseParen(1),
    Exit,
]
